--- a/blog/blog/static/css/style.css
+++ b/blog/blog/static/css/style.css
@@ -8,34 +8,45 @@ body {
     min-height: 100vh;
     background-color: black;
     color: whitesmoke;
-    font-size: 2.5rem;
-    display: flex;
-    flex-flow: column;
+    font-size: 3rem;
 }
 
 nav {
     padding: 1rem;
-    background-color: #114b72;
+    background-color: #44B78B;
     color: white;
-    font-size: 2.2rem;
+    font-size: 2.5rem;
 }
 
 main {
-    flex-grow: 1;
-    display: grid;
-    place-content: center;
+    padding: 1rem;
 }
 
-h1,
+section {
+    display: flex;
+    flex-flow: column;
+    gap: 1rem;
+}
+
+h2 {
+    font-size: 2.5rem;
+}
+
 p {
-    text-align: center;
+    font-size: 1rem;
 }
 
 a {
     text-decoration: none;
-    color: #0ba0b4;
+    color: #81dbb8;
 }
 
 a:hover {
     opacity: .85;
+}
+
+.banner {
+    display: block;
+    width: 100%;
+    max-width: 800px;
 }
