--- a/blog/blog/templates/layout.html
+++ b/blog/blog/templates/layout.html
@@ -13,10 +13,17 @@
     <script src="{% static 'js/main.js' %}" defer></script>
 </head>
 <body>
-    <nav>
-        <a href="/">🏠</a> | 
-        <a href="/about">😀</a> | 
-        <a href="/posts">📰</a>
+    <nav> 
+        <a href="/">
+        <span role="img" aria-label="Home">🏠</span>
+    </a> | 
+    <a href="/about">
+        <span role="img" aria-label="About">😀</span>
+    </a> | 
+    <a href="{% url 'posts:list' %}">
+        <span role="img" aria-label="Posts">📰</span>
+
+        </a>
     </nav>
     <main>
         {% block content %}
