added a registration form

--- a/blog/blog/templates/layout.html
+++ b/blog/blog/templates/layout.html
@@ -23,6 +23,9 @@
     <a href="{% url 'posts:list' %}">
         <span role="img" aria-label="Posts">📰</span>
 
+        </a> | 
+        <a href="{% url 'users:register' %}">
+            <span role="img" aria-label="User Registration" title="User Registration">🚀</span>
         </a>
     </nav>
     <main>
