--- a/blog/blog/static/css/style.css
+++ b/blog/blog/static/css/style.css
@@ -13,7 +13,7 @@ body {
 
 nav {
     padding: 1rem;
-    background-color: #15728a;
+    background-color: #29021c;
     color: white;
     font-size: 2.5rem;
 }
@@ -39,7 +39,7 @@ p {
 
 a {
     text-decoration: none;
-    color: #79d2f5;
+    color: #1db9e9;
 }
 
 a:hover {
@@ -93,4 +93,19 @@ a:hover {
 
 .errorlist li::marker {
     content: '🚨 ';
+}
+
+
+.logout {
+    display: inline-block;
+}
+
+.logout-button {
+    font-size: 2.5rem;
+    background-color: rgba(159, 62, 223, 0);
+    border: none;
+}
+
+.logout-button:hover {
+    opacity: .85;
 }
